????/??/?? Code Quality Improvements for MOSREF 
  + BUG: (format '(1 2 3)) yields "(1)" when vm built with -Os, -O3, ...
    + Does not happen with -O1, -O2 and -O0
  + Added HELP for properties.
    + mosref/node has documentation storage
    + props have doc entries, just not tied into help.
    + Add static help topics
  + Added test suite for all MOSREF commands using a local drone.
  + Ensured the initial mode of any executable created by WaspC is 0700.
  + Verify standalone operation of drone. 
  + Verify Cross-platform operation using win32.
  + Verify Cross-platform operation using darwin.
  + Tagged MOSREF as MOSREF 3.0b1
  + Tagged WASPVM as 0.4 final.

2008/08/30 MOSREF Proxy Command and Fixes
  At this point, MOSREF is functional, but could use some improvements; this
  milestone is focussed on making MOSREF a production-worthy tool.
  
  - Verified operation of drone bridging.
  - Moved mosref/patch to lib/patch.
  - Removed debugging spam from lib/patch.
  - Modified MOSREF communications to operate in blocks of random sizes from 0 
    to 255 bytes, each block has a checksum, the overall message has a 
    checksum.  This reduces the potential for noise to tie up memory or hang 
    the node.  (It will still cause the connection to break, though.)
  - Renamed tcp-connect primitive to start-tcp-connect
  - Modified outbound tcp connections to yield 'connect after they first 
    connect.
  - Added tcp-connect function to core/io; emulates old synchronous 
    tcp-connect behavior.  (Eating the opening 'connect message.)
  - Restored tcp-forward.
  - Adulterated spawn in mosref to traceback and halt on an unhandled error in
    any spawned process.
  - Ensured that OS connections will only yield a 'close once; subsequent 
    waits on the connection result in an infinite wait.  (Which corresponds
    with other inputs.)
  - Restored the MOSREF "proxy" command.

2006/08/16 Port MOSREF 2.0b4 into WaspVM.